# vtuber-tracker

./: .gitignore  ARCHITECTURE.md  CARA_INSTALL.md  CONTRIBUTING.md  Dockerfile  FINAL_STATUS.md  INSTALL.md  LICENSE  ONE_COMMAND_RUN.md  README.md  SECURITY.md  VERSION_INFO.md  __main__.py  app.py  camera_util.py  docker-compose.yml  example_usage.py  install.bat  install.sh  launch_app.py  main.py  obs_integration.md  obs_integration_example.py  pytest.ini  python_cpp_bridge.py  requirements.txt  run_app.py  run_vtuber_tracker.py  setup.py  startup.bat  startup.sh  test_new_features.py  vtuber-tracker.desktop  vtuber_tracker_lib.py
config/: config.json
cpp/: CMakeLists.txt  cpp_python_libraries.md
cpp/include/: face_tracker_cpp.h
cpp/src/: face_tracker_cpp.cpp  python_wrapper.cpp
examples/: 3d_model_integration.py  all_platforms_support.py  android_camera_example.py  android_camera_integration.py  calibration_example.py  simple_example.py  steam_game_integration.py  vseeface_integration.py
gui/: __init__.py  main_gui.py
sender/: __init__.py  vmc_sender.py  vts_sender.py
tests/: test_basic.py
tracker/: __init__.py  calibration.py  camera.py  face_tracking.py  landmarks_to_params.py  precision_mode.py  smoothing.py  virtual_camera.py
